--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@ Tickets are $20 Adults / $15 Child</p>
 
 <p>22/4/2021: LITTLE ANDROMEDA, CHRISTCHURCH: <a href="http://events.humanitix.com/earnest">Book Tickets</a></p>
 
-<p>23/04/2021:  ISAAC ROYAL, CHRISTCHURCH: Ticket Information Available Soon.</p>
+<p>23/04/2021:  ISAAC ROYAL THEATRE, CHRISTCHURCH: Ticket Information Available Soon.</p>
 
-<p>24/04/2021:  WINCHMORE HALL, Door Sales Only.</p>
+<p>24/04/2021:  WINCHMORE HALL: Door Sales Only.  (To reserve a ticket, please message Big Little Theatre Co. Inc on Facebook)</p>
 
 <h2 id="about-the-director">About the Director</h2>
 
