--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Tickets are $20 Adults / $15 Child</p>
 
 <p>23/04/2021:  ISAAC ROYAL THEATRE, CHRISTCHURCH: Ticket Information Available Soon.</p>
 
-<p>24/04/2021:  WINCHMORE HALL: Door Sales Only.  (To reserve a ticket, please message Big Little Theatre Co. Inc on Facebook)</p>
+<p>24/04/2021:  WINCHMORE HALL: Door Sales Only.  (To reserve a ticket, please message <a href="https://www.facebook.com/thebiglittletheatrecompany/?fref=tag">Big Little Theatre Inc</a> on Facebook)</p>
 
 <h2 id="about-the-director">About the Director</h2>
 
