--- a/index.html
+++ b/index.html
@@ -64,11 +64,12 @@ Adapted and Directed by Nomi Cohen.</p>
 <p>All Performances are at 7:30pm.
 Tickets are $20 Adults / $15 Child</p>
 
-<p>21/04/2021: ASHBURTON EVENTS CENTRE:  <a href="http://ateventcentre.co.nz/the-importance-of-being-earnest-the-big-little-theatre-company-inc/">Book Tickets</a></p>
+<p>21/04/2021: ASHBURTON EVENTS CENTRE:  <a href="http://ateventcentre.co.nz/the-importance-of-being-earnest-the-big-little-theatre-company-inc/">Book Tickets</a>(SOLD OUT)</p>
 
-<p>22/4/2021: LITTLE ANDROMEDA, CHRISTCHURCH: <a href="http://events.humanitix.com/earnest">Book Tickets</a></p>
+<p>22/4/2021: LITTLE ANDROMEDA, CHRISTCHURCH: <a href="http://events.humanitix.com/earnest">Book Tickets</a>(SOLD OUT)</p> 
 
-<p>24/04/2021:  WINCHMORE HALL: Door Sales Only.  (To reserve a ticket, please message <a href="https://www.facebook.com/thebiglittletheatrecompany/?fref=tag">Big Little Theatre Inc</a> on Facebook)</p>
+<p>24/04/2021:  WINCHMORE HALL: <a href="https://www.thestorknetwork.net/collections/education/products/the-importance-of-being-earnest-winchmore-hall">Tickets Available Here</a></p>
+Tickets Recommended - Limited Door Sales Available.
 
 <h2 id="about-the-director">About the Director</h2>
 
