--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p><img src="frightnight.jpg" alt="Fright Night" /></p>
+        <p style="text-align:center;"><img src="frightnight.jpg" alt="Fright Night" /></p>
 
 
 
-<p><img src="bltc.jpg" alt="bltc" /></p>
+<p style="text-align:center;"><img src="bltc.jpg" alt="bltc" /></p>
 
       </section>
     </div>
