--- a/index.html
+++ b/index.html
@@ -40,11 +40,8 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p style="text-align:center;"><img src="frightnight.jpg" class="centerImage" alt="Fright Night" /></p>
-
-
-
-<p style="text-align:center;"><img src="bltc.jpg"  class="centerImage" alt="bltc" /></p>
+        <center><img src="frightnight.jpg" class="centerImage" alt="Fright Night" /></center>
+<center><img src="bltc.jpg"  class="centerImage" alt="bltc" /></center>
 
       </section>
     </div>
