--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
   <body>
 
     <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
+  #  <div id="header_wrap" class="outer">
+  #      <header class="inner">
           <h1 id="project_title">The BIG Little Theatre Company</h1>
 
           
-        </header>
-    </div>
+   #     </header>
+   # </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
