--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- HEADER -->
   #  <div id="header_wrap" class="outer">
   #      <header class="inner">
-          <h1 id="project_title">The BIG Little Theatre Company</h1>
+    <center><h1 id="project_title">The BIG Little Theatre Company</h1></center>
 
           
    #     </header>
