--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           Each show we produce is both extremely high quality and rich in experience for the budding actors.
           
         <center><h3>Upcoming Events:</h3>
-        <center><img src="elementofrisk.jpg" class="centerImage" alt="There's an Element of Risk" /></center>
+        <center><img src="thumbnail_image001.png" class="centerImage" alt="There's an Element of Risk" /></center>
        
    <center><h2 >Facebook Feed:</h1></center>
         <div class="fb-page" data-href="https://www.facebook.com/thebiglittletheatrecompany" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote cite="https://www.facebook.com/thebiglittletheatrecompany" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/thebiglittletheatrecompany">The Big Little Theatre Company Inc</a></blockquote></div>
