--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <p> The Big Little Theatre Company Inc is an Ashburton-based production company providing opportunities for the Big Little Theatre Company Actors to perform in several shows a year.
           Each show we produce is both extremely high quality and rich in experience for the budding actors.
           
-        <center><h3>Upcoming Events:</h3>
+        <center><h3>Coming Up (Tickets Available Soon!):</h3>
         <center><img src="thumbnail_image001.png" class="centerImage" alt="There's an Element of Risk" /></center>
        
 <right><img src="bltc.jpg"  class="centerImage" alt="bltc" /></right>
