--- a/pages/Home.html
+++ b/pages/Home.html
@@ -7,13 +7,13 @@
                 Devised by Students of the Big Little Theatre Company, this show will make you laugh out loud, and maybe shed a tear as well. 
                 
                 The last BLTC production sold out for every show, so plan ahead and secure your tickets soon. 
-                
+                <br>
                 Tickets will be on sale soon for the following shows: 
                 <br>
-                Friday 19 August 7pm: Mt Somers Hall,
+                Fri Aug 19, 7pm: Mt Somers Hall,
                 <br>
-                Saturday 20 August 7pm: Halswell  Community Hall, 
+                Sat Aug 20, 7pm: Halswell  Community Hall, 
                 <br>
-                Sunday 28 August 2pm: Ashburton Events Centre </div>
+                Sun Aug 29, 2pm: Ashburton Events Centre </div>
         </div>
 </body>
