--- a/pages/Home.html
+++ b/pages/Home.html
@@ -8,12 +8,12 @@
                 
                 The last BLTC production sold out for every show, so plan ahead and secure your tickets soon. 
                 <br>
-                Tickets will be on sale soon for the following shows: 
+                Tickets will soon be avaialble here for the following shows: 
                 <br>
-                Fri Aug 19, 7pm: Mt Somers Hall,
+                        <b>Fri Aug 19, 7pm</b>: Mt Somers Hall.
                 <br>
-                Sat Aug 20, 7pm: Halswell  Community Hall, 
+                            <b>Sat Aug 20</b>, 7pm: Halswell Community Hall. 
                 <br>
-                Sun Aug 29, 2pm: Ashburton Events Centre </div>
+                            <b>Sun Aug 29, 2pm</b>: Ashburton Events Centre. </div>
         </div>
 </body>
