--- a/pages/Home.html
+++ b/pages/Home.html
@@ -10,10 +10,10 @@
                 <br>
                 Tickets will soon be avaialble here for the following shows: 
                 <br>
-                        <b>Fri Aug 19, 7pm</b>: Mt Somers Hall.
+                      <small>  <b>Fri Aug 19, 7pm</b>: Mt Somers Hall.
                 <br>
                             <b>Sat Aug 20</b>, 7pm: Halswell Community Hall. 
                 <br>
-                            <b>Sun Aug 29, 2pm</b>: Ashburton Events Centre. </div>
+                                  <b>Sun Aug 29, 2pm</b>: Ashburton Events Centre. </small> </div>
         </div>
 </body>
