--- a/pages/Home.html
+++ b/pages/Home.html
@@ -8,7 +8,7 @@
                 
                 The last BLTC production sold out for every show, so plan ahead and secure your tickets soon. 
                 <br>
-                Tickets will soon be avaialble here for the following shows: 
+                Tickets will soon be available here for the following shows: 
                 <br>
                       <small>  <b>Fri Aug 19, 7pm</b>: Mt Somers Hall.
                 <br>
