--- a/mobile/pages/Home.html
+++ b/mobile/pages/Home.html
@@ -10,13 +10,13 @@
         
         The last BLTC production sold out for every show, so plan ahead and secure your tickets soon. 
         
-        Tickets will be on sale soon for the following shows: 
+        Tickets will be available here soon for the following shows: 
         <br>
-        Friday 19 August 7pm: Mt Somers Hall,
+        <b>Friday 19 August 7pm</b>: Mt Somers Hall.
         <br>
-        Saturday 20 August 7pm: Halswell  Community Hall, 
+            <b>Saturday 20 August 7pm</b>: Halswell  Community Hall. 
         <br>
-        Sunday 28 August 2pm: Ashburton Events Centre
+            <b>Sunday 28 August 2pm</b>: Ashburton Events Centre.
         </span>
     </center>
 </body>
