--- a/pages/Home.html
+++ b/pages/Home.html
@@ -10,10 +10,10 @@
                 <br>
                 Tickets will soon be available here for the following shows: 
                 <br>
-                      <small>  <b>Fri Aug 19, 7pm</b>: Mt Somers Hall.
+                        <b>Fri Aug 19, 7pm</b>: Mt Somers Hall.
                 <br>
                                   <b>Sat Aug 20, 7pm</b>: Halswell Community Hall. 
                 <br>
-                                  <b>Sun Aug 29, 2pm</b>: Ashburton Events Centre. </small> </div>
+                                  <b>Sun Aug 29, 2pm</b>: Ashburton Events Centre. </div>
         </div>
 </body>
