--- a/mobile/pages/About.html
+++ b/mobile/pages/About.html
@@ -17,8 +17,16 @@
         </p>
         6.30 – 8.30 – Senior Preparation for Performance (Rehearsal for upcoming show). 
         <br>
-        <img src="GroupPhoto1.jpg" alt="Group Photo" style="width: 40vh; margin: 2vh;">
-        <img src="GroupPhoto2.png" alt="Group Photo" style="width: 40vh; margin:2vh">
+        
+          <figure>
+    <img src="GroupPhoto1.png" alt="Group Photo" style="right: 6vw; position: absolute; height: 60vh; bottom: 2vh;">
+          <figcaption>Members of BLTC at the Globe Theatre, London</figcaption>
+        </figure>
+          <figure>
+    <img src="GroupPhoto2.png" alt="Group Photo" style="right: 6vw; position: absolute; height: 60vh; bottom: 2vh;">
+          <figcaption>Cast of 'The Importance of Being Earnest, at Little Andromeda, Christchurch</figcaption>
+        </figure>
+        
         <hr>
         <h2>Follow us on Facebook:</h2>
         <div id="fb-root"></div>
