--- a/pages/About.html
+++ b/pages/About.html
@@ -1,4 +1,4 @@
-<body style="font-size: 2.8vh; margin: 10vh; overflow: hidden;">
+<body style="font-size: 2.8vh; margin: 10vh; overflow: scroll;">
     <p>
     The Big Little Theatre Company is a two-pronged Ashburton-based theatre company.  
     </p>
