--- a/mobile/pages/About.html
+++ b/mobile/pages/About.html
@@ -5,9 +5,13 @@
         The Big Little Theatre Company is a two-pronged Ashburton-based theatre company.  
         </p>
         <p>
-        BLTC inc., is a production company which performs annual shows. Each show we produce is both extremely high in quality and rich in experience for the young actors.  We are currently rehearsing for ‘There’s an Element of Risk’ – made up of both Senior and Junior students – incorporating a lot of students' own writing.  Tickets will be on sale soon, for performances in August. 
-        </p>
-        BLTC actor training offers weekly lessons for young actors aged from 6 - 18. Our lessons help children build confidence, make meaningful friendships and grow into incredible actors. We train every Tuesday and offer a unique series of acting workshops. We also prepare students for Trinity College (London) Examinations, and have a track record of outstanding success. 
+            
+             
+BLTC inc, is a production company which has produced well over 15 separate shows, from pantomime to Shakespeare, performed on The Court theatre Stage, trained at The Globe Theatre in London, The Egg Theatre in Bath and in Stratford upon Avon with The Royal Shakespeare Company. Its aim is quite simple – to enable all students to stand strong in their own space and to love the theatre, its power and magic for ever. 
+ </p>
+BLTC actor training meets weekly and trains young actors (aged 6 – 18) in all aspects of stagecraft, preparing them for life as well as examination and performance. 
+ We train every Tuesday and offer a unique series of acting workshops. We also prepare students for Trinity College (London) Examinations, and have a track record of outstanding success.
+     </p>
         <p>
         Current BLTC Actor Training Tuesday schedule: 
         </p>
