--- a/pages/Home.html
+++ b/pages/Home.html
@@ -2,10 +2,10 @@
             <center><H1>Coming Soon:</H1></center>
             <img src="NewShow.png" alt="Theres An Element Of Risk Poster" style="width: 30vw; position: absolute; left: 19vw">
             <div style="max-width: 30vw; position: absolute; right: 19vw; font-size: 2.04vw;">
-                Don’t miss our (Covid-delayed) ANZAC show, finally hitting the stage in August: ‘There’s an Element of Risk’.   
+                Don’t miss our (Covid-delayed) ANZAC show, finally hitting the stage in August: ‘There’s an Element of Risk’. 
+                        
+               The show is set in 1946, where a motley cast from the local village are rehearsing a show to cheer the spirits on the ‘Home Front’. The show follows the cast’s rehearsals, taking the audience with them into the hearts and minds of those who served, those who stayed behind, those who loved and those who lost. 
 
-                Devised by Students of the Big Little Theatre Company, this show will make you laugh out loud, and maybe shed a tear as well. 
-                
                 The last BLTC production sold out for every show, so plan ahead and secure your tickets soon. 
                 <br>
                 Tickets will soon be available here for the following shows: 
