--- a/mobile/pages/Home.html
+++ b/mobile/pages/Home.html
@@ -6,7 +6,7 @@
         <span style="font-size: 2.8vh;">
         Don’t miss our (Covid-delayed) ANZAC show, finally hitting the stage in August: ‘There’s an Element of Risk’.   
 
-        Devised by Students of the Big Little Theatre Company, this show will make you laugh out loud, and maybe shed a tear as well. 
+        The show is set in 1946, where a motley cast from the local village are rehearsing a show to cheer the spirits on the ‘Home Front’. The show follows the cast’s rehearsals, taking the audience with them into the hearts and minds of those who served, those who stayed behind, those who loved and those who lost.  
         
         The last BLTC production sold out for every show, so plan ahead and secure your tickets soon. 
         
