--- a/mobile/pages/Home.html
+++ b/mobile/pages/Home.html
@@ -4,6 +4,7 @@
         <img src="NewShow.png" alt="Theres An Element Of Risk Poster" style="width:90%">
         <hr>
         <span style="font-size: 2.8vh;">
+            <small>
         Don’t miss our (Covid-delayed) ANZAC show, finally hitting the stage in August: ‘There’s an Element of Risk’.   
 
         The show is set in 1946, where a motley cast from the local village are rehearsing a show to cheer the spirits on the ‘Home Front’. The show follows the cast’s rehearsals, taking the audience with them into the hearts and minds of those who served, those who stayed behind, those who loved and those who lost.  
@@ -17,6 +18,7 @@
             <b>Saturday 20 August 7pm</b>: Halswell  Community Hall. 
         <br>
             <b>Sunday 28 August 2pm</b>: Ashburton Events Centre.
+            </small>
         </span>
     </center>
 </body>
