--- a/pages/Home.html
+++ b/pages/Home.html
@@ -2,7 +2,8 @@
             <center><H1>Coming Soon:</H1></center>
             <img src="NewShow.png" alt="Theres An Element Of Risk Poster" style="width: 30vw; position: absolute; left: 19vw">
             <div style="max-width: 30vw; position: absolute; right: 19vw; font-size: 2.04vw;">
-                Don’t miss our (Covid-delayed) ANZAC show, finally hitting the stage in August: ‘There’s an Element of Risk’. 
+                        <small>
+                Don’t miss our (Covid-delayed) ANZAC show, finally hitting the stage in August.
                         
                The show is set in 1946, where a motley cast from the local village are rehearsing a show to cheer the spirits on the ‘Home Front’. The show follows the cast’s rehearsals, taking the audience with them into the hearts and minds of those who served, those who stayed behind, those who loved and those who lost. 
 
@@ -15,5 +16,6 @@
                                   <b>Sat Aug 20, 7pm</b>: Halswell Community Hall. 
                 <br>
                                   <b>Sun Aug 29, 2pm</b>: Ashburton Events Centre. </div>
+                        </small>
         </div>
 </body>
