--- a/pages/Home.html
+++ b/pages/Home.html
@@ -3,10 +3,10 @@
             <img src="NewShow.png" alt="Theres An Element Of Risk Poster" style="width: 30vw; position: absolute; left: 19vw">
             <div style="max-width: 30vw; position: absolute; right: 19vw; font-size: 2.04vw;">
                         <small>
-                Don’t miss our (Covid-delayed) ANZAC show, finally hitting the stage in August.
+                Don’t miss our (Covid-delayed) ANZAC show "There's an Element of Risk", finally hitting the stage in August.
                         
                The show is set in 1946, where a motley cast from the local village are rehearsing a show to cheer the spirits on the ‘Home Front’. The show follows the cast’s rehearsals, taking the audience with them into the hearts and minds of those who served, those who stayed behind, those who loved and those who lost. 
-
+<br>
                 The last BLTC production sold out for every show, so plan ahead and secure your tickets soon. 
                 <br>
                 Tickets will soon be available here for the following shows: 
