--- a/pages/Home.html
+++ b/pages/Home.html
@@ -5,7 +5,7 @@
                         <small>
                                     Don’t miss our (Covid-delayed) ANZAC show "<em>There's an Element of Risk</em>", finally hitting the stage in August.
                         
-               The show is set in 1946, where a motley cast from the local village are rehearsing a show to cheer the spirits on the ‘Home Front’. The show follows the cast’s rehearsals, taking the audience with them into the hearts and minds of those who served, those who stayed behind, those who loved and those who lost. 
+               The show is set in 1942, where a motley cast from the local village are rehearsing a show to cheer the spirits on the ‘Home Front’. The show follows the cast’s rehearsals, taking the audience with them into the hearts and minds of those who served in both wars, those who stayed behind, those who loved and those who lost. 
 <br>
                 The last BLTC production sold out for every show, so plan ahead and secure your tickets soon. 
                 <br>
