--- a/mobile/pages/About.html
+++ b/mobile/pages/About.html
@@ -7,7 +7,7 @@
         <p>
             
              
-BLTC inc, is a production company which has produced well over 15 separate shows, from pantomime to Shakespeare, performed on The Court theatre Stage, trained at The Globe Theatre in London, The Egg Theatre in Bath and in Stratford upon Avon with The Royal Shakespeare Company. Its aim is quite simple – to enable all students to stand strong in their own space and to love the theatre, its power and magic for ever. 
+BLTC inc, is a production company which has produced well over 15 separate shows, from pantomime to Shakespeare. They have performed on The Court theatre Stage, trained at The Globe Theatre in London, The Egg Theatre in Bath and in Stratford upon Avon with The Royal Shakespeare Company. The company's aim is quite simple – to enable all students to stand strong in their own space and to love the theatre, its power and magic for ever. 
  </p>
 BLTC actor training meets weekly and trains young actors (aged 6 – 18) in all aspects of stagecraft, preparing them for life as well as examination and performance. 
  We train every Tuesday and offer a unique series of acting workshops. We also prepare students for Trinity College (London) Examinations, and have a track record of outstanding success.
