--- a/pages/Home.html
+++ b/pages/Home.html
@@ -9,9 +9,9 @@
 <br>
                 The last BLTC production sold out for every show, so plan ahead and secure your tickets soon. 
                 <br>
-                Tickets will soon be available here for the following shows: 
+                Buy Tickets here: 
                 <br>
-                        <b>Fri Aug 19, 7pm</b>: Mt Somers Hall.
+                        <b>Fri Aug 19, 7pm</b>: <a href="https://nz.patronbase.com/_AshburtonEventCentre/Productions/7AF/Performances">Mt Somers Hall</a>
                 <br>
                                   <b>Sat Aug 20, 7pm</b>: Halswell Community Hall. 
                 <br>
