--- a/mobile/pages/Home.html
+++ b/mobile/pages/Home.html
@@ -13,7 +13,7 @@
         
         Tickets will be available here soon for the following shows: 
         <br>
-        <b>Friday 19 August 7pm</b>: Mt Somers Hall.
+        <b>Friday 19 August 7pm</b>: <a href="https://nz.patronbase.com/_AshburtonEventCentre/Productions/7AF/Performances">Mt Somers Hall</a>
         <br>
             <b>Saturday 20 August 7pm</b>: Halswell  Community Hall. 
         <br>
