--- a/mobile/pages/Home.html
+++ b/mobile/pages/Home.html
@@ -15,9 +15,9 @@
         <br>
         <b>Friday 19 August 7pm</b>: <a href="https://nz.patronbase.com/_AshburtonEventCentre/Productions/7AF/Performances">Mt Somers Hall</a>
         <br>
-            <b>Saturday 20 August 7pm</b>: Halswell  Community Hall. 
+            <b>Saturday 20 August 7pm</b>: Halswell  Community Hall. (On sale soon) 
         <br>
-            <b>Sunday 28 August 2pm</b>: Ashburton Events Centre.
+            <b>Sunday 28 August 2pm</b>: Ashburton Events Centre. (On sale soon) 
             </small>
         </span>
     </center>
