--- a/pages/Home.html
+++ b/pages/Home.html
@@ -13,9 +13,9 @@
                 <br>
                         <b>Fri Aug 19, 7pm</b>: <a href="https://nz.patronbase.com/_AshburtonEventCentre/Productions/7AF/Performances">Mt Somers Hall</a>
                 <br>
-                                  <b>Sat Aug 20, 7pm</b>: Halswell Community Hall. 
+                                  <b>Sat Aug 20, 7pm</b>: Halswell Community Hall. (On sale soon) 
                 <br>
-                                  <b>Sun Aug 29, 2pm</b>: Ashburton Events Centre. </div>
+                                  <b>Sun Aug 29, 2pm</b>: Ashburton Events Centre. (On sale soon) </div>
                         </small>
         </div>
 </body>
