--- a/pages/Home.html
+++ b/pages/Home.html
@@ -15,7 +15,8 @@
                 <br>
                                   <b>Sat Aug 20, 7pm</b>: Halswell Community Hall. (On sale soon) 
                 <br>
-                                  <b>Sun Aug 29, 2pm</b>: Ashburton Events Centre. (On sale soon) </div>
+                                  <b>Sun Aug 29, 2pm</b>:  <a href=" https://nz.patronbase.com/_AshburtonEventCentre/Productions/78T/Performances">Ashburton Event Centre</a> </div>
+                       
                         </small>
         </div>
 </body>
