--- a/mobile/pages/Home.html
+++ b/mobile/pages/Home.html
@@ -17,7 +17,8 @@
         <br>
             <b>Saturday 20 August 7pm</b>: Halswell  Community Hall. (On sale soon) 
         <br>
-            <b>Sunday 28 August 2pm</b>: Ashburton Events Centre. (On sale soon) 
+  <b>Sunday Aug 29, 2pm</b>:  <a href=" https://nz.patronbase.com/_AshburtonEventCentre/Productions/78T/Performances">Ashburton Event Centre</a> 
+                       
             </small>
         </span>
     </center>
