--- a/pages/Home.html
+++ b/pages/Home.html
@@ -13,7 +13,8 @@
                 <br>
                         <b>Fri Aug 19, 7pm</b>: <a href="https://nz.patronbase.com/_AshburtonEventCentre/Productions/7AF/Performances">Mt Somers Hall</a>
                 <br>
-                                  <b>Sat Aug 20, 7pm</b>: Halswell Community Hall. (On sale soon) 
+                                  <b>Sat Aug 20, 7pm</b>: <a href="https://www.trybooking.com/nz/events/7474/sessions/31141/sections/22265/tickets"> Halswell  Community Hall</a>
+    
                 <br>
                                   <b>Sun Aug 29, 2pm</b>:  <a href=" https://nz.patronbase.com/_AshburtonEventCentre/Productions/78T/Performances">Ashburton Event Centre</a> </div>
                        
