--- a/mobile/pages/Home.html
+++ b/mobile/pages/Home.html
@@ -11,7 +11,7 @@
         
         The last BLTC production sold out for every show, so plan ahead and secure your tickets soon. 
         
-        Tickets will be available here soon for the following shows: 
+        Tickets are available now: 
         <br>
         <b>Friday 19 August 7pm</b>: <a href="https://nz.patronbase.com/_AshburtonEventCentre/Productions/7AF/Performances">Mt Somers Hall</a>
         <br>
