post production update

--- a/mobile/pages/About.html
+++ b/mobile/pages/About.html
@@ -19,7 +19,7 @@ BLTC actor training meets weekly and trains young actors (aged 6 – 18) in all 
         <p>
         5.30 – 6.30 – Senior Improvised drama and theatre sports 
         </p>
-        6.30 – 8.30 – Senior Preparation for Performance (Rehearsal for upcoming show). 
+        6.30 – 7.30 – Senior Drama. 
         <br>
       
       
