--- a/pages/About.html
+++ b/pages/About.html
@@ -14,7 +14,7 @@ BLTC actor training meets weekly and trains young actors (aged 6 – 18) in all 
     <p>
     5.30 – 6.30 – Senior Improvised drama and theatre sports 
     </p>
-    6.30 – 8.30 – Senior Preparation for Performance (Rehearsal for upcoming show). 
+    6.30 – 7.30 – Senior Drama 
     <h2>Follow us on Facebook:</h2>
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0" nonce="dvcuRkde"></script>  
