--- a/iPhone/index.html
+++ b/iPhone/index.html
@@ -17,12 +17,12 @@
 
          <b>Wed Apr 19, 7:30pm</b>: Papa Hou, YMCA, Christchurch. Tickets coming soon.
          <br>
-                           <b>Thurs Apr 20, 7:30pm</b>: <a href="http://ateventcentre.co.nz/well-thank-you-thursday-methven-show/"></a>Memorial Hall, Methven</a>
+                           <b>Thurs Apr 20, 7:30pm</b>: <a href="http://ateventcentre.co.nz/well-thank-you-thursday-methven-show/">Memorial Hall, Methven</a>
  
          <br>
-                           <b>Fri Apr 21, 7:30pm</b>: <a href="http://ateventcentre.co.nz/thank-you-thursday/"></a> Ashburton Trust Event Centre </a>
+                           <b>Fri Apr 21, 7:30pm</b>: <a href="http://ateventcentre.co.nz/thank-you-thursday/">Ashburton Trust Event Centre </a>
                           <br>
-                           <b>Sat Apr 22, 7:30pm</b>: <a href="http://ateventcentre.co.nz/thank-you-thursday/"></a> Ashburton Trust Event Centre </a>    
+                           <b>Sat Apr 22, 7:30pm</b>: <a href="http://ateventcentre.co.nz/thank-you-thursday/">Ashburton Trust Event Centre </a>    
                          </small>
 
                          
