--- a/pages/Home.html
+++ b/pages/Home.html
@@ -1,6 +1,6 @@
 <body style="background-color: #E7F6F2;">
     <center><H1>Well, Thank you, Thursday</H1></center>
-    <img src="ThursdayPortrait.jpg" alt="Well, Thank You, Thrusday" style="width: 30vw; position: absolute; left: 19vw">
+    <img src="ThursdayPortrait.jpg" alt="Well, Thank You, Thursday" style="width: 30vw; position: absolute; left: 19vw">
     <div style="max-width: 30vw; position: absolute; right: 19vw; font-size: 2.04vw;">
                 <small>
                 
@@ -15,12 +15,12 @@
         <br>
                 <b>Wed Apr 19, 7:30pm</b>: Papa Hou, YMCA, Christchurch. Tickets coming soon.
         <br>
-                          <b>Thurs Apr 20, 7:30pm</b>: <a href="http://ateventcentre.co.nz/well-thank-you-thursday-methven-show/"></a>Memorial Hall, Methven</a>
+                          <b>Thurs Apr 20, 7:30pm</b>: <a href="http://ateventcentre.co.nz/well-thank-you-thursday-methven-show/">Memorial Hall, Methven</a>
 
         <br>
-                          <b>Fri Apr 21, 7:30pm</b>: <a href="http://ateventcentre.co.nz/thank-you-thursday/"></a> Ashburton Trust Event Centre </a>
+                          <b>Fri Apr 21, 7:30pm</b>: <a href="http://ateventcentre.co.nz/thank-you-thursday/">Ashburton Trust Event Centre </a>
                          <br>
-                          <b>Sat Apr 22, 7:30pm</b>: <a href="http://ateventcentre.co.nz/thank-you-thursday/"></a> Ashburton Trust Event Centre </a>  
+                          <b>Sat Apr 22, 7:30pm</b>: <a href="http://ateventcentre.co.nz/thank-you-thursday/">Ashburton Trust Event Centre </a>  
                         </small>
                
 </div>
