Chch ticket link

--- a/iPhone/index.html
+++ b/iPhone/index.html
@@ -15,7 +15,7 @@
          
          <h2 style="font-size: xxx-large;">Tickets available here:</h2>
 
-         <b>Wed Apr 19, 7:30pm</b>: Papa Hou, YMCA, Christchurch. Tickets coming soon.
+         <b>Wed Apr 19, 7:30pm</b>: <a href="https://www.trybooking.com/nz/events/landing?eid=8968&"> Papa Hou, YMCA, Christchurch</a>
          <br>
                            <b>Thurs Apr 20, 7:30pm</b>: <a href="http://ateventcentre.co.nz/well-thank-you-thursday-methven-show/">Memorial Hall, Methven</a>
  
