--- a/mobile/pages/Home.html
+++ b/mobile/pages/Home.html
@@ -8,7 +8,7 @@
                 Big Little Theatre Company presents the tragi-comedy <em>Well, Thank You, Thursday</em>, adapted for the stage for the very first time.  Boldly presented on a traverse stage, the play explores a day in the life of a number of disparate lives. The stories of the richly depicted characters ultimately come together at the local registry office, an office which anchors key moments in our lives: birth, marriage, death. 
         <h3>Tickets available here: </h3>
      
-        <b>Wed Apr 19, 7:30pm</b>: Papa Hou, YMCA, Christchurch. Tickets coming soon.
+        <b>Wed Apr 19, 7:30pm</b>: <a href="https://www.trybooking.com/nz/events/landing?eid=8968&"> Papa Hou, YMCA, Christchurch</a>
         <br>
                           <b>Thurs Apr 20, 7:30pm</b>: <a href="http://ateventcentre.co.nz/well-thank-you-thursday-methven-show/">Memorial Hall, Methven</a>
 
