--- a/mobile/pages/Home.html
+++ b/mobile/pages/Home.html
@@ -10,12 +10,13 @@
      
         <b>Wed Apr 19, 7:30pm</b>: <a href="https://www.trybooking.com/nz/events/landing?eid=8968&"> Papa Hou, YMCA, Christchurch</a>
         <br>
-                          <b>Thurs Apr 20, 7:30pm</b>: <a href="http://ateventcentre.co.nz/well-thank-you-thursday-methven-show/">Memorial Hall, Methven</a>
+        <b>Thurs Apr 20, 7:30pm</b>: <a href="https://nz.patronbase.com/_AshburtonEventCentre/Productions/7G0/Performances">Memorial Hall, Methven</a>
 
-        <br>
-                          <b>Fri Apr 21, 7:30pm</b>: <a href="http://ateventcentre.co.nz/thank-you-thursday/"> Ashburton Trust Event Centre </a>
-                         <br>
-                          <b>Sat Apr 22, 7:30pm</b>: <a href="http://ateventcentre.co.nz/thank-you-thursday/"> Ashburton Trust Event Centre </a>                 
+<br>
+        <b>Fri Apr 21, 7:30pm</b>: <a href="https://nz.patronbase.com/_AshburtonEventCentre/Productions/7CP/Performances">Ashburton Trust Event Centre </a>
+       <br>
+        <b>Sat Apr 22, 7:30pm</b>: <a href="https://nz.patronbase.com/_AshburtonEventCentre/Productions/7CP/Performances">Ashburton Trust Event Centre </a>  
+                     
             </small>
         </span>
     </center>
