--- a/mobile/pages/PastEvents.html
+++ b/mobile/pages/PastEvents.html
@@ -14,7 +14,7 @@
 		}
 	</style>
 </head>
-<body onload="renderPhotos()" style="background-color: black; text-align: center;">
+<body onload="renderPhotos()" style="background-color: black; height: 100dvh; text-align: center;">
 	<div class="selectedImageButtons" onclick="deselect()" style="width: 5vh; height: 5vh; background-color: gray; opacity: 0; position: absolute; right: 2vh; top: 2vh; font-size: 3.5vh;">✖</div>
 </body>
 </html>
