--- a/mobile/pages/Home.html
+++ b/mobile/pages/Home.html
@@ -1,4 +1,4 @@
-<body style="background-color: #E7F6F2; margin: 4vh;">
+<body style="background-color: #E7F6F2; height: 100dvh; margin: 4vh;">
     <center>
         <h1 style="font-size: xxx-large;">Well, Thank you, Thursday</h1>
         <img src="ThursdayPortrait.jpg" alt="Well, Thank you, Thursday Poster" style="width:90%">
