--- a/iPhone/index.html
+++ b/iPhone/index.html
@@ -13,7 +13,7 @@
                               
          <br>
          
-         <h2 style="font-size: xxx-large;">Tickets available here soon:</h2>
+         <h2 style="font-size: xxx-large;">Tickets available here:</h2>
 
          <br>
                  <b>Wed Apr 19, 7:30pm</b>: <a href="https://www.trybooking.com/nz/events/landing?eid=8968&"> Papa Hou, YMCA, Christchurch</a>
