--- a/pages/Home.html
+++ b/pages/Home.html
@@ -1,7 +1,7 @@
 <body style="background-color: #E7F6F2;">
     <p>
     <center><H1>The Quest of Story Grove</H1></center>
-    <img src="good-story.jpg" alt="The Quest of Story Grove" style="width: 30vw; position: absolute; left: 19vw">
+    <img src="groveportrait.jpeg" alt="The Quest of Story Grove" style="width: 30vw; position: absolute; left: 19vw">
     <div style="max-width: 30vw; position: absolute; right: 19vw; font-size: 2.04vw;">
                 <small>
                      This is a tale about the wonders of stories, the ingredients that make them extraordinary, and the importance they hold in our hearts.
@@ -9,7 +9,7 @@
                 </small>             
         <br>
         
-        <b>Saturday Oct - Sunday Oct 8, 2023. Ashburton Event Centre </b>
+        <b>Saturday Oct 7 - Sunday Oct 8, 2023. Ashburton Event Centre </b>
         <br>
 <a href="http://ateventcentre.co.nz/the-quest-of-story-grove-big-little-theatre-company/"> Tickets available here</a>
       
