--- a/iPhone/index.html
+++ b/iPhone/index.html
@@ -45,7 +45,7 @@ BLTC actor training meets weekly and trains young actors (aged 6 – 18) in all 
       
      <img src="group.jpg" alt="Group Photo" style="width: 40vh; margin: 2vh;">
 
-   <img src="GroupPhoto1.png" alt="Group Photo" style="width: 40vh; margin:2vh";>
+   <img src="GroupPhoto1.jpg" alt="Group Photo" style="width: 40vh; margin:2vh";>
  
    <h1 style="font-size: xxx-large;">For more information:</h1>
 
