--- a/mobile/pages/About.html
+++ b/mobile/pages/About.html
@@ -25,7 +25,7 @@ BLTC actor training meets weekly and trains young actors (aged 6 – 18) in all 
       
      <img src="group.jpg" alt="Group Photo" style="width: 40vh; margin: 2vh;">
 
-   <img src="GroupPhoto1.png" alt="Group Photo" style="width: 40vh; margin:2vh";>
+   <img src="GroupPhoto1.jpg" alt="Group Photo" style="width: 40vh; margin:2vh";>
  
         
         <hr>
