--- a/mobile/pages/Home.html
+++ b/mobile/pages/Home.html
@@ -1,7 +1,9 @@
 <body style="background-color: #E7F6F2;">
     <p>
 
-    <h1 style="font-size: xxx-large;"> Hey! Have YOU been invited to the Party?</h1>
+    <h1 style="font-size: xxx-large;"> Hey!</h1>
+
+      <h1 style="font-size: xxx-large;">Have YOU been invited to the Party?</h1>
 
         <img src="AIC.jpg" alt="An Inspector Calls" style="width:90%">
 <br>
