--- a/mobile/pages/Home.html
+++ b/mobile/pages/Home.html
@@ -15,7 +15,7 @@ Step into the mysterious world of <b>An Inspector Calls</b>, where secrets unrav
 
         <br>
 
-<a href="https://asheventcentre.co.nz/event/an-inspector-calls/">Buy Tickets Now</a>
+<a href="https://nz.patronbase.com/_AshburtonEventCentre/Productions/7NI/Performances">Buy Tickets Now</a>
 
     
                
